<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.reports.dialogs.reportcreation.NewReportFragmentDialog">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:background="@color/ic_launcher_background"
        android:backgroundTint="@color/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView8"
                style="@android:style/Widget.DeviceDefault.Light.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/new_report"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/confirm_new_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/rollback_new_report"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/buildings_spinner"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:dropDownWidth="wrap_content"
                android:gravity="center"
                android:minHeight="48dp"
                android:prompt="@string/building"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_report_title" />

            <Spinner
                android:id="@+id/categories_spinner"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:entries="@array/reports_categories"
                android:gravity="center"
                android:minHeight="48dp"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_report_title" />

            <EditText
                android:id="@+id/edit_text_report_title"
                style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:maxLength="25"
                android:gravity="center|top"
                android:hint="@string/report_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/edit_text_report_description"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:maxLength="200"
                android:gravity="center|top"
                android:hint="@string/insert_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_report_error_spinner_buildings" />

            <TextView
                android:id="@+id/new_report_error_spinner_buildings"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@color/md_theme_light_error"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buildings_spinner" />

            <TextView
                android:id="@+id/new_report_error_spinner_categories"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:text="TextView"
                android:textColor="@color/md_theme_light_error"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories_spinner" />

            <TextView
                android:id="@+id/new_report_title_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@color/md_theme_light_error"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_report_title" />

            <TextView
                android:id="@+id/new_report_description_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@color/md_theme_light_error"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_report_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>