<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.reports.ReportsFragment">

        <SearchView
            android:id="@+id/fragmentReport_searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/searchview_border"
            android:backgroundTint="@color/md_theme_light_secondaryContainer"
            android:searchIcon="@drawable/search"
            android:searchHintIcon="@drawable/search"
            android:closeIcon="@drawable/clear"
            android:goIcon="@drawable/search"
            android:queryBackground="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragmentReport_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentReport_searchView" />

        <TextView
            android:id="@+id/textView_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_onSecondaryContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_filter_buildings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/button_filter_selection"
            android:focusable="true"
            android:src="@drawable/building"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton_favorite"
            app:layout_constraintEnd_toEndOf="@+id/floatingActionButton_menu"
            app:layout_constraintStart_toStartOf="@+id/floatingActionButton_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/button_favorite_buildings_selection"
            android:focusable="true"
            android:src="@drawable/heart_unfilled1"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton_add_new_report"
            app:layout_constraintEnd_toEndOf="@+id/floatingActionButton_menu"
            app:layout_constraintStart_toStartOf="@+id/floatingActionButton_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_add_new_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/button_add_new_report"
            android:focusable="true"
            android:src="@drawable/add_logo"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton_menu"
            app:layout_constraintEnd_toEndOf="@+id/floatingActionButton_menu"
            app:layout_constraintStart_toStartOf="@+id/floatingActionButton_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/main_menu_button"
        android:focusable="true"
        android:src="@drawable/menu_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>