...
    <string name="close"> Chiudi </string>
    <string name="report_closed_correctly"> Segnalazione chiusa correttamente </string>
    <string name="button_favorite_buildings_selection">Bottone per selezionare gli edifici preferiti</string>
    <string name="button_filter_selection">Bottone per selezionare i filtri degli edifici</string>
    <string name="main_menu_button">bottone_principale_del_menu</string>
    <string name="select_buildings_filters">Seleziona gli edifici per filtrare le segnalazioni</string>
    <string name="filter_by_favorite_buildings">Visualizza le segnalazioni dei miei edifici preferiti</string>
    <string name="show_all_buildings_reports">Visualizza le segnalazioni di tutti gli edifici</string>
    <string name="choose_favorite_buildings">Scegli i tuoi edifici preferiti</string>
    <string name="favorite_explain_1">Riceverai notifiche in tempo reale delle segnalazioni associate agli edifici selezionati</string>
    <string name="favorite_explain_2">Quando aprirai l\'applicazione le segnalazioni verranno filtrate automaticamente secondo gli edifici scelti</string>
    <string name="category_name"> Nome categoria</string>
    <string name="remote_save_user_favorite_buildings_error">Errore nel salvataggio remoto degli edifici preferiti dell\'utente</string>
    <string name="local_save_user_favorite_buildings_error">Errore nel salvataggio locale degli edifici preferiti dell\'utente</string>
    <string name="local_read_user_favorite_buildings_error">Errore nella lettura locale degli edifici preferiti dell\'utente</string>
    <string name="remote_read_user_favorite_buildings_error">Errore nella lettura locale degli edifici preferiti dell\'utente</string>
    <string name="no_favorites_building"> Nessun edificio è selezionato come preferito</string>
...
